about and contact page updated

--- a/todolist_app/templates/about.html
+++ b/todolist_app/templates/about.html
@@ -2,6 +2,9 @@
 <title>About Us</title>
 {% endblock title %} {% block content %}
 <div class="container">
-  <h1>{{ about_text }}</h1>
+  <center><h1>{{ about_text }}</h1></center>
+  <center>
+    <a href="https://n5hossai.github.io/portfolio/">Find me Here</a>
+  </center>
 </div>
 {% endblock content %}
