--- a/todolist_app/templates/contact.html
+++ b/todolist_app/templates/contact.html
@@ -2,6 +2,9 @@
 <title>Contact Us</title>
 {% endblock title %} {% block content %}
 <div class="container">
-  <h1>{{ contact_text }}</h1>
+  <center><h1>{{ contact_text }}</h1></center>
+  <center>
+    <a href="mailto: abc@example.com">Send Me an Email for any fix or issue!</a>
+  </center>
 </div>
 {% endblock content %}
