--- a/todolist_app/templates/contact.html
+++ b/todolist_app/templates/contact.html
@@ -4,7 +4,9 @@
 <div class="container">
   <center><h1>{{ contact_text }}</h1></center>
   <center>
-    <a href="mailto: abc@example.com">Send Me an Email for any fix or issue!</a>
+    <a href="mailto:naymulhossain21@gmail.com"
+      >Send Me an Email for any fix or issue!</a
+    >
   </center>
 </div>
 {% endblock content %}
